deploy/admission_controller.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: project-admission-controller
  labels:
    app: project-admission-controller
  name: project-admission-controller-svc
spec:
  ports:
  - name: 443-tcp
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: project-admission-controller
    deploymentconfig: project-admission-controller
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: project-admission-controller
  name: project-admission-controller
spec:
  replicas: 1
  selector:
    app: project-admission-controller
    deploymentconfig: project-admission-controller
  template:
    metadata:
      labels:
        app: project-admission-controller
        deploymentconfig: project-admission-controller
    spec:
      containers:
      - env:
        - name: CERT_FOLDER
          value: /app/cert
        - name: MAX_ALLOWED_PROJECT
          value: "2"
        - name: PORT
          value: "8443"
        image: docker.io/azopat/admission
        imagePullPolicy: Always
        name: controller
        ports:
        - containerPort: 8443
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 300Mi
        volumeMounts:
        - mountPath: /app/cert
          name: volume-cert
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccount: project-admission-controller-sa
      volumes:
      - name: volume-cert
        secret:
          defaultMode: 420
          secretName: project-admission-controller
  triggers:
  - type: ConfigChange
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: project-validation-webhook
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTakNDQWpLZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREEyTVRRd01nWURWUVFEREN0dmNHVnUKYzJocFpuUXRjMlZ5ZG1salpTMXpaWEoyYVc1bkxYTnBaMjVsY2tBeE5UZzFOVFkwT1RneE1CNFhEVEl3TURNegpNREV3TkRNd01Wb1hEVEl4TURNek1ERXdORE13TWxvd05qRTBNRElHQTFVRUF3d3JiM0JsYm5Ob2FXWjBMWE5sCmNuWnBZMlV0YzJWeWRtbHVaeTF6YVdkdVpYSkFNVFU0TlRVMk5EazRNVENDQVNJd0RRWUpLb1pJaHZjTkFRRUIKQlFBRGdnRVBBRENDQVFvQ2dnRUJBSjE2OG5lOXQ2Zjd5Q2hneWkzb3RyVXVTdlZuaFZ1bXVKN2dSR00wMEtURwpGZHdTODlxTlN0R0 [...]
    service:
      name: project-admission-controller-svc
      namespace: project-admission-validation
      path: /validate-project
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: project-validation-webhook.cluster.local
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - project.openshift.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    resources:
    - projectrequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
